--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "yi-fs": "1.0.0",
     "yi-task":"1.0.0",
     "underscore":"1.4.4",
-    "iconv-lite":"0.2.7",
+    "iconv-lite":"0.2.7"
   },
   "devDependencies": {
     "coffee-script": "1.4.0"
